# Todo_App

./: License.md  README.md  app.py  pyproject.toml
templates/: list.html
todo_starter/: app.py  pyproject.toml
todo_starter/templates/: layout.html  list.html  lists.html
todo_starter/todos/: utils.py
