[tool.poetry]
name = "todos"
version = "0.1.0"
description = "A project using python web dev frameworks flask to create a Todo Application"
authors = ["Ochulor Okechukwu <Ochulor.okechukwu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
